-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
5.12.0 Alpha
-
None
Some JavaScript-based tests have regressed by as much as 95% around June 17th.
Both tests are JavaScript-bound and use Math functions in case that matters.
The regression also seems to be visible in some other tests, but to a lesser degree.
May be related to 9333ea8649838d7e0400b0e94c8cbd4fa5d216b0 since that seems to be the only change that went into dev at the time of the regression.
- resulted in
-
QTBUG-71204 [REG 5.x -> 5.12] Javascript function calls not using local scope
-
- Closed
-
| For Gerrit Dashboard: QTBUG-70315 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 238623,3 | Fix logic error in JSCodeGen::fallbackNameLookup() | 5.12 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 238626,3 | Enable lookups for global properties in QML | 5.12 | qt/qtdeclarative | Status: MERGED | +2 | 0 |