Enable lookups for global properties in QML

Task-number: QTBUG-70315
Change-Id: I2408c7a8561a000cb161e0bad066e5754be3b7ef
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>